Mon Dec  9 17:02:41 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Change from using
          -qtemplateregistry to use -qtempinc for Visual Age C++ 6 template
          handling. -qtemplateregistry is a nice idea, but generates too
          many errors from missing templates. Using -qtempinc still generates
          gobs of multiple-instantiation warnings, but the build is correct
          and the tests run.

        * bin/aix_shr: Add the error number patterns for VA 6's multiple
          template instantiation warnings to the filter-out pattern.

Mon Dec  9 15:42:39 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* examples/C++NPv1/Reactive_Logging_Server_Ex.cpp:  Removed
	  duplicate template specialization for ACE_Hash<ACE_HANDLE> on
	  Windows that's no longer needed.

Mon Dec  9 07:41:39 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OS_Test.cpp:
	* ace/OS_String.cpp (strsncpy): Fixed a cut and paste error. 
	

Mon Dec  9 00:09:55 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/INET_Addr.cpp (get_host_addr): Changed the usage of strncpy
	  () to strsncpy (). Thanks to Alain Decamps for donating this patch.

Sun Dec  8 23:56:09 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/OS_String.cpp: Applied patches from Alain Decamps to make
	  strsncpy () more robust.  If dst == src, the return string will
	  have utmost 'maxlen'. 
	
	* tests/OS_Test.cpp: Added a test case for strsncpy (). Thanks to
	  Alain Decamps for donating the patch.

Sun Dec 08 22:44:07 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Functor.h (void *): 
	* ace/Functor.i: Added a template specialization for ACE_Hash <void *>. 

Sun Dec 08 09:45:34 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Map_Manager.h:
        * ace/SString.h:
        * ace/Unbounded_Queue.h:
          Improved doxygen documentation
